# QAMQP

./: CMakeLists.txt
src/qamqp/: amqp.cpp  amqp_message.h
